--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ section:nth-of-type(5){ background:#d7ccc8;}
 
 /*header==================================================================*/
 header{
-	background: url(../img/DSC_0954.JPG) center center no-repeat;
+	background: url(../img/index_bg.JPG) center center no-repeat;
 	background-size: cover;
     background-position: center center;
 	position: relative;
@@ -88,6 +88,13 @@ header h1 a{
     font-size: 18px;
     position: absolute; top:0; right: 0;
     cursor: pointer;
+}
+@media (max-width:768px){
+    header{
+        background: url(../img/index_bg01.JPG) center center no-repeat;
+        background-size: cover;
+        background-position: center center;
+    }
 }
 
 /* topSide */
@@ -637,4 +644,10 @@ textarea {
 }
 
 /*footer==================================================================*/
-footer {font-size: 15px;  margin: 0 auto;  padding: 5px 0; text-align:center;}
+footer {
+    font-size: 15px;  
+    margin: 0 auto;  
+    padding: 15px 0; 
+    text-align:center;
+    font-family: Verdana, Geneva, sans-serif;
+}
